# shipengine-python

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  poetryScratch.py  pyproject.toml  pytest.ini  release-please-config.json  requirements.txt  setup.py  tox.ini
.github/workflows/: CD.yml  CI.yml  main.yml
docs/: address_validation_example.md  addresses_validate_example.md  conf.py  create_label_from_rate_example.md  create_label_from_rate_id_example.md  create_label_from_shipment.md  get_rate_estimate_example.md  get_rates_from_shipment_example.md  index.rst  list_carriers_example.md  list_labels_by_tracking_number.md  normalize_address_example.md  track_package_by_carrier_code_and_tracking_number_example.md  track_package_by_label_id_example.md  track_package_example.md  void_label_by_label_id_example.md
shipengine/: __init__.py  shipengine.py  shipengine_config.py
shipengine/enums/: __init__.py  error_code.py  error_source.py  error_type.py  regex_patterns.py
shipengine/errors/: __init__.py
shipengine/http_client/: __init__.py  client.py
shipengine/util/: __init__.py  sdk_assertions.py
shipengine_sdk/: __init__.py  shipengine.py  shipengine_config.py
shipengine_sdk/enums/: __init__.py
shipengine_sdk/errors/: __init__.py
shipengine_sdk/events/: __init__.py  request_sent_event.py  response_received_event.py  shipengine_event.py  shipengine_event_listener.py
shipengine_sdk/http_client/: __init__.py  client.py
shipengine_sdk/jsonrpc/: __init__.py  process_request.py
shipengine_sdk/models/: __init__.py
shipengine_sdk/models/address/: __init__.py
shipengine_sdk/models/carriers/: __init__.py
shipengine_sdk/models/enums/: __init__.py  country.py  error_code.py  error_source.py  error_type.py  regex_patterns.py
shipengine_sdk/models/enums/carriers/: __init__.py  carrier_names.py  carriers.py
shipengine_sdk/models/package/: __init__.py
shipengine_sdk/models/track_pacakge/: __init__.py
shipengine_sdk/services/: __init__.py  address_validation.py  get_carrier_accounts.py  track_package.py
shipengine_sdk/util/: __init__.py  iso_string.py  sdk_assertions.py
tests/: __init__.py  test_shipengine.py  test_shipengine_config.py  test_shipengine_sdk.py  test_snake_case_converter.py
tests/errors/: test_errors.py
tests/events/: __init__.py  test_emitted_events.py  test_request_sent_event.py
tests/http_client/: test_http_client.py
tests/jsonrpc/: test_process_request.py
tests/models/: __init__.py
tests/models/address/: test_address.py
tests/models/carriers/: test_carrier.py  test_carrier_account.py
tests/models/track_package/: __init__.py  test_package.py  test_shipment.py  test_track_package_result.py  test_tracking_event.py
tests/services/: __init__.py  test_address_validation.py  test_create_label_from_rate_id.py  test_create_label_from_shipment.py  test_get_carrier_accounts.py  test_get_rate_from_shipment.py  test_list_carriers.py  test_normalize_address.py  test_track_package.py  test_validate_addresses.py
tests/util/: __init__.py  stub_functions.py  test_data.py  test_helpers.py  test_iso_string.py
