[tool.poetry]
name = "shipengine"
version = "0.0.0"
description = "A Python library for ShipEngine."
authors = ["KaseyCantu <kpc.software.engineer@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ShipEngine/shipengine-python"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
format = "{base}"

[tool.poetry-dynamic-versioning.substitution]
files = ["*.py", "*/__init__.py", "*/__version__.py", "*/_version.py"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.4"
requests = "^2.25.1"
python-dotenv = "^0.15.0"
dataclasses-json = "^0.5.3"
fuuid = "^0.1.0"
poetry-dynamic-versioning = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = ">=5.0"
pytest-cov = "^2.11.1"
pytest-mock = "^3.6.1"
black = "^20.8b1"
flake8 = "^3.8.4"
Sphinx = "^3.5.2"
tox = "^3.23.0"
coverage = "^5.5"
isort = "^5.8.0"
coveralls = "^3.1.0"
pre-commit = "2.13.0"
pytest-cache = "^1.0"
pytest-watch = "^4.2.0"
responses = "^0.13.3"

[tool.black]
line-length = 100
target-verstion = ["py37"]
safe = true

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.coverage.run]
relative_files = true

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
