[tool.poetry]
name = "shipengine"
version = "2.0.5"
description = "The official Python library for ShipEngine API."
readme = "README.md"
authors = ["ShipEngine <support@shipengine.com>"]
homepage = "https://www.shipengine.com/"
license = "Apache-2.0"
repository = "https://github.com/ShipEngine/shipengine-python"
include = ["CHANGELOG.md"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
format = "{base}"
bump = true

[tool.poetry-dynamic-versioning.substitution]
files = ["*.py", "*/__init__.py", "*/__version__.py", "*/version.py"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.0"
requests = "^2.25.1"
python-dotenv = "^0.15.0"
dataclasses-json = "^0.5.3"
fuuid = "^0.1.0"
poetry-dynamic-versioning = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^2.11.1"
pytest-mock = "^3.6.1"
black = "^22.0.0"
flake8 = "^6.0.0"
Sphinx = "^3.5.2"
tox = "^3.23.0"
coverage = "^5.5"
isort = "^5.8.0"
coveralls = "^3.1.0"
pre-commit = "2.13.0"
pytest-watch = "^4.2.0"
responses = "^0.13.3"

[tool.black]
line-length = 100
target-version = ["py310"]
safe = true

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.coverage.run]
relative_files = true

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
